2007-03-29  Quentin Mathe <qmathe@club-internet.fr>

	First part of a fix to get rid of bordered button drawing visible in menu
	item cells with recent GNUstep svn.
	* NSButtonCell.m:
	(-drawWithFrame:inView:): Modified to partially match latest changes in 
	GNUstep svn. Moved border drawing in 
	_drawBorderAndBackgroundWithFrame:inView:.
	(_drawBorderAndBackgroundWithFrame:inView:): New method that can be 
	overriden in subclass or category like WildMenus NSMenuItemCell one.
	* NSMenuItem.m (_drawBorderAndBackgroundWithFrame:inView:): New method to
	match latest GNUstep svn implementation.
	Also added some logging statements for debugging.

2007-03-18  Yen-Ju Chen <yjchenx at gmail>

	* Put Nesedah.theme in resources as default theme.

2007-02-18  Yen-Ju Chen <yjchenx at gmail>

	* Make README in reStructured format.

2007-02-06  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Replaced GNUSTEP_INSTALLATION_DOMAIN by 
	ETOILE_CORE_MODULE flag (will be documented and implemented in 
	etoile.make). Also included etoile.make.

2007-01-09  Quentin Mathe <qmathe@club-internet.fr>

	* GSDrawFunctions.h:
	* GSDrawFunctions.m:
	(-drawDarkBezel::): Added. This missing method was used by NSBox.m, it
	resulted in a crash on the display of Gorm size inspector.

2006-11-25 Nicolas Roard <nicolas@roard.com>

	* GSDrawFunctions.h:
	* GSDrawFunctions.m:
	* CamaelonDrawFunctions.h:
	* CamaelonDrawFunctions.m:
	* NSTableView.m:
	Patched to compile (and work) with current gnustep svn. 
	Based on a patch from Matt Rice <ratmice@gmail.com>
	 
2006-09-12 Quentin Mathe <qmathe@club-internet.fr>

	* NSBrowserCell.m (-highlightColorInView:) 
	(-drawInteriorWithFrame:inView:): Added a new method 
	-highlightColorInView: in the 'theme' category. This overrides the 
	method currently used by the class itself and allows to remove a 
	dubious line in the other method. Inspired by an Andreas Hoschler 
	patch.

2006-09-12 Quentin Mathe <qmathe@club-internet.fr>
